# codestudio-lite

./: .gitignore  README.md  findings.md  index.html  package-lock.json  package.json  panda.config.ts  progress.md  task_plan.md  tsconfig.json  tsconfig.tests.json  updater.config.json  vite.config.ts
docs/: architecture.md  r2-auto-update.md  security.md
scripts/: build-linux-updater.sh  build-macos-dmg.sh  build-macos-updater.sh  codestudio-runas-probe.ps1  create-macos-dmg.sh  debug-claude-inspector.cmd  debug-claude-inspector.mjs  debug-claude-inspector.ps1  export-updater-signing-key.ps1  fix-claude-locale-garbled.mjs  generate-update-manifest.mjs  import-updater-signing-key.ps1  normalize-linux-artifacts.sh  normalize-macos-artifacts.sh  (+6 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_claude_asar.rs
src-tauri/icons/: icon.icns
src-tauri/resources/claude-desktop/i18n/: zh-CN.json
src-tauri/resources/claude-desktop/i18n/ion-dist/i18n/: zh-CN.json
src-tauri/resources/claude-desktop/i18n/ion-dist/i18n/dynamic/: zh-CN.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: activity_log.rs  app_updater.rs  backup.rs  chatgpt_desktop.rs  claude_desktop.rs  codex_client.rs  detect.rs  doctor.rs  gateway.rs  gateway_request_log.rs  install_terminal.rs  mod.rs  profiles.rs  settings.rs  tool_installer.rs  usage_query.rs
src-tauri/src/core/: activity_log.rs  app_paths.rs  app_updater.rs  asar_archive.rs  backup.rs  chatgpt_desktop.rs  chatgpt_desktop_tests.rs  claude_desktop_patch.rs  claude_desktop_patch_tests.rs  claude_desktop_release.rs  codex_client.rs  codex_client_tests.rs  codex_plugin_marketplace.rs  codex_provider_sync.rs  computer_use_guard.rs  credentials.rs  detector.rs  doctor.rs  download_http.rs  env_health.rs  gateway.rs  gateway_request_log.rs  mod.rs  npm_global.rs  privacy_filter.rs  process_control.rs  profile.rs  profile_tests.rs  storage.rs  tool_catalog.rs  tool_installer.rs  tool_installer_tests.rs  tool_launch.rs  tool_registry.rs  tray.rs  types.rs  upstream_http.rs  usage_query.rs
src-tauri/src/core/gateway/: auth.rs  privacy.rs  route.rs  runtime.rs  server.rs  upstream.rs
src-tauri/src/core/gateway/protocol/: anthropic.rs  canonical.rs  gemini.rs  mod.rs  openai_chat.rs  openai_responses.rs  stream.rs
src-tauri/src/core/platform/: mod.rs  package.rs
src-tauri/src/core/profile/: manager.rs  policy.rs  provider_http.rs  restart.rs  store.rs
src-tauri/src/core/profile/manager/: native_sync.rs
src-tauri/src/core/profile/native/: claude.rs  claude_desktop.rs  codex.rs  gemini.rs  gemini_code_assist.rs  grok.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs  plan.rs
(+100 files in other folders)
