[package]
name = "codestudio-lite"
version = "1.2.1"
description = "A desktop-only Local AI Gateway and Provider Switcher for AI coding tools."
authors = ["CodeStudio Lite"]
license = "MIT"
edition = "2021"

[package.metadata]
product-name = "CodeStudio Lite"

[lib]
name = "codestudio_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
json5 = "0.4"
rquickjs = { version = "0.9", features = ["macro"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tungstenite = { version = "0.26", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
toml = "0.8"
toml_edit = "0.25"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Com", "Win32_UI_Shell"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Networking_WinHttp", "Win32_Security_Credentials", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
